// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<button
  className="css-z07lik"
  onClick={[Function]}
  tabIndex={-1}
>
  <span>
    string
  </span>
</button>
`;

exports[`BadgeButton danger 1`] = `
<button
  className="css-1ajjn9d"
  onClick={[Function]}
  tabIndex={-1}
>
  danger
</button>
`;

exports[`BadgeButton default 1`] = `
<button
  className="css-z07lik"
  onClick={[Function]}
  tabIndex={-1}
>
  default
</button>
`;

exports[`BadgeButton outline 1`] = `
<button
  className="css-a25fbm"
  onClick={[Function]}
  tabIndex={-1}
>
  outline
</button>
`;

exports[`BadgeButton primary 1`] = `
<button
  className="css-aazq2z"
  onClick={[Function]}
  tabIndex={-1}
>
  primary
</button>
`;

exports[`BadgeButton success 1`] = `
<button
  className="css-9ne0g7"
  onClick={[Function]}
  tabIndex={-1}
>
  success
</button>
`;

exports[`BadgeButton warning 1`] = `
<button
  className="css-t67ibq"
  onClick={[Function]}
  tabIndex={-1}
>
  warning
</button>
`;
